Prevent template flickering prior to Vue mounting

--- a/src/app.scss
+++ b/src/app.scss
@@ -33,6 +33,10 @@
     outline: 0;
 }
 
+[v-cloak] {
+    display: none;
+}
+
 a {
     color: var(--font-primary);
     text-decoration: none;
